# satellite_telemetry

./: .gitignore  README.md  pyproject.toml  requirements.txt
dags/: _typing.py  alert.py  configs.py  dags.py  generate_data.py  init.py  spark_session.py  typing_.py
dags/tasks/: __init__.py  _alert_anomaly.py  _calc_altitude_mart.py  _calc_speed_mart.py  _calc_temperature_mart.py  _detect_anomaly.py  alert_anomaly.py  calc_altitude_mart.py  calc_speed_mart.py  calc_temperature_mart.py  detect_anomaly.py
dags/utils/: alert.py  logger.py  spark_session.py
docker/: Dockerfile  airflow_requirements.txt  docker-compose.yml
