[project]
name = "spark-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.9.3",
    "boto3>=1.38.42",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pyspark==3.5.6",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "ruff>=0.12.0",
]

[tool.uv.workspace]
members = ["ruff"]
